# Torpedo

./: .gitignore  :q  Makefile  README.md  pyproject.toml  pytest.ini  run_env.sh  run_tests_cpu.sh  train_cmd.sh
artifacts_smoke/: aggregate_instability_s_1.json
artifacts_smoke/INST_A/instability_s_1/: eval_test.json  feature_schema.json  predictions_test.csv  predictions_test_with_ret.csv  predictions_test_with_ret.metrics.json  scaler_schema.json  split_indices.json  tda_backends.json  training_meta.json
artifacts_smoke/INST_B/instability_s_1/: eval_test.json  feature_schema.json  predictions_test.csv  predictions_test_with_ret.csv  predictions_test_with_ret.metrics.json  scaler_schema.json
configs/: example_experiment.yaml  paper_manifest.yaml
cpp/: CMakeLists.txt  fast_eval  lobster_fast
cpp/include/torpedocode/: kernels.hpp
cpp/src/: extension.cpp  fast_eval.cpp  lob_kernels.cu  lobster_fast.cpp  tda.cpp  tda_kernels.cu  tpp_loss.cpp
python/torpedocode/: __init__.py  config.py
python/torpedocode/bench/: benchmark.py
python/torpedocode/cli/: _windowing.py  aggregate.py  baselines.py  batch_train.py  ca_preview.py  cache.py  case_studies.py  cross_market.py  econ_baseline.py  economic.py  eval.py  ingest.py  interpret.py  manifest.py  merge_lobster.py  metrics_regime.py  panel.py  pretrain_ctmc.py  report_multi.py  tda_check.py  topo_search.py  tpp_eval.py  train.py  train_multi.py
python/torpedocode/configs/: __init__.py
python/torpedocode/cuda/: __init__.py  ops.py
python/torpedocode/data/: __init__.py  itch.py  loader.py  lobster.py  native.py  ouch.py  pipeline.py  preprocess.py  preprocessing.py  synthetic.py  (+1 more)
rust/torpedocode-ingest/: Cargo.toml
rust/torpedocode-ingest/src/: adapters.rs  lib.rs  normalisers.rs
rust/torpedocode-panel/: Cargo.toml
rust/torpedocode-py/: Cargo.toml
rust/torpedocode-py/src/: lib.rs
rust/torpedocode-tda/: Cargo.toml
rust/torpedocode-tda/src/: lib.rs
scripts/: add_fake_returns.py  binance_to_ndjson.py  build_native.py  check_cuda.py  coinbase_to_ndjson.py  cpu_smoke.py  download_binance_monthly.py  download_coinbase_trades.py  fi2010_to_ndjson.py  iex_to_ndjson.py  paper_pack.py  paper_smoke.py  run_tests_uv.sh  run_training.py  run_wizard.py  setup_env.py  stream_binance.py  stream_coinbase.py
tests/: conftest.py  test_batch_train_modes.py  test_benchmark.py  test_binance_converter.py  test_block_bootstrap_auto.py  test_builder_artifacts.py  test_causal_returns.py  test_cli_aggregate.py  test_cli_aggregate_block_bootstrap.py  test_cli_baselines.py  test_cli_baselines_extended.py  test_cli_baselines_hawkes_exp.py  test_cli_batch_train_extras.py  test_cli_batch_train_topology_json.py  test_cli_batch_types_info.py  test_cli_ca_preview.py  test_cli_cache.py  test_cli_econ_baseline.py  test_cli_economic.py  test_cli_economic_valsplit.py  test_cli_eval.py  test_cli_ingest.py  test_cli_ingest_check.py  test_cli_ingest_eta.py  test_cli_ingest_multi_dirs.py  test_cli_interpret_shap_and_cases.py  test_cli_manifest.py  test_cli_manifest_extras.py  test_cli_merge_lobster.py  test_cli_metrics_regime.py  test_cli_pretrain_ctmc.py  test_cli_tpp_confusion.py  test_cli_tpp_eval.py  test_cli_train.py  test_cli_train_expand_types.py  test_cli_train_extras.py  test_cli_train_topology_selected.py  test_coinbase_converter.py  test_cpp_lobster_fast_cli.py  test_cpp_lobster_stateful_infer.py  (+54 more)
(+25 files in other folders)
