[package]
name = "torpedocode-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "torpedocode_ingest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[dependencies.torpedocode-ingest]
path = "../torpedocode-ingest"
