[package]
name = "torpedocode-tda"
version = "0.1.0"
edition = "2021"

[lib]
name = "torpedocode_tda"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
